--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,10 @@ include_directories(.)
 include_directories(include)
 include_directories(src)
 
+link_libraries("-lboost_system")
+
 add_executable(Boost_Echo_Client
         include/connectionHandler.h
         src/connectionHandler.cpp
         src/echoClient.cpp
-        makefile)
+        makefile src/Stomp/stopmClient.cpp include/stopmClient.h src/Stomp/keyboardInputSend.cpp include/keyboardInputSend.h src/Stomp/socketReader.cpp include/socketReader.h src/Stomp/stompConnectionHandler.cpp include/stompConnectionHandler.h)
