--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,4 @@ add_executable(Boost_Echo_Client
         include/connectionHandler.h
         src/connectionHandler.cpp
         src/echoClient.cpp
-        makefile src/Stomp/stopmClient.cpp include/stopmClient.h src/Stomp/keyboardInputSend.cpp include/keyboardInputSend.h src/Stomp/socketReader.cpp include/socketReader.h src/Stomp/stompConnectionHandler.cpp include/stompConnectionHandler.h)
+        makefile src/Stomp/stopmClient.cpp include/stopmClient.h src/Stomp/keyboardInputSend.cpp include/keyboardInputSend.h src/Stomp/socketReader.cpp include/socketReader.h src/Stomp/stompConnectionHandler.cpp include/stompConnectionHandler.h src/Stomp/user.cpp src/Stomp/user.h src/Stomp/Book.cpp include/Book.h)
