--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,6 @@ include_directories(src)
 
 link_libraries("-lboost_system")
 
-add_executable(Boost_Echo_Client
-        include/connectionHandler.h
-        src/connectionHandler.cpp
-        src/echoClient.cpp
-        makefile src/Stomp/stopmClient.cpp include/stopmClient.h src/Stomp/keyboardInputSend.cpp include/keyboardInputSend.h src/Stomp/socketReader.cpp include/socketReader.h src/Stomp/stompConnectionHandler.cpp include/stompConnectionHandler.h src/Stomp/user.cpp src/Stomp/user.h src/Stomp/Book.cpp include/Book.h)
+
+add_executable(stompClient
+        makefile src/Stomp/stompClient.cpp include/stompClient.h src/Stomp/keyboardInputSend.cpp include/keyboardInputSend.h src/Stomp/socketReader.cpp include/socketReader.h src/Stomp/stompConnectionHandler.cpp include/stompConnectionHandler.h src/Stomp/User.cpp include/User.h src/Stomp/Book.cpp include/Book.h)
